[tool.poetry]
name = "hyena-dna"
version = "0.1.0"
description = "Official implementation for HyenaDNA, a long-range genomic foundation model built with Hyena."
authors = ["Christian Gaetano <hello@christiangaetano.com>"]
license = "Apache-2.0"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
datasets = "^2.15.0"
einops = "^0.7.0"
genomic-benchmarks = "^0.0.9"
hydra-core = "^1.3.2"
liftover = "^1.1.17"
lightning = "^2.1.2"
loguru = "^0.7.2"
matplotlib = "^3.8.2"
numerize = "^0.12"
numpy = "^1.26.2"
omegaconf = "^2.3.0"
opt-einsum = "^3.3.0"
pandas = "^2.1.4"
polars = "^0.19.19"
prettytable = "^3.9.0"
pyfaidx = "^0.7.2.2"
rich = "^13.7.0"
scikit-learn = "^1.3.2"
scipy = "^1.11.4"
timm = "^0.9.12"
torch = "^2.1.2"
torchtext = "^0.16.2"
torchvision = "^0.16.2"
tqdm = "^4.66.1"
transformers = "4.26.1"
wandb = "^0.16.1"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.2"
mypy = "^1.7.1"
ruff = "^0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
